--- a/mp4/index.html
+++ b/mp4/index.html
@@ -39,6 +39,7 @@
             border-radius: 4px;
             cursor: pointer;
             font-size: 16px;
+            color: red;
         }
         button:hover {
             background-color: #45a049;
